syntax = "proto3";

package user;

service UserService {
  rpc HealthCheck (Empty) returns (Empty);
  rpc CreateUser (CreateUserRequest) returns (UserResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc FindUserById (FindUserByIdRequest) returns (UserResponse);
  rpc FindAllUsers (Empty) returns (UsersResponse);
  rpc UpdateUserById (UpdateUserByIdRequest) returns (UserResponse);
  rpc DeleteUserById (FindUserByIdRequest) returns (UserResponse);
}

message CreateUserRequest {
  string email = 1;
  string password = 2;
  string role = 3;
}

message FindUserByIdRequest {
  string id = 1;
}

message UpdateUserByIdRequest {
  string id = 1;
  optional string email = 2;
  optional string password = 3;
  optional string role = 4;
}

message DeleteUserByIdRequest {
  string id = 1;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string accessToken = 1;
  UserResponse user = 2;
}

message UserResponse {
  string id = 1;
  string email = 2;
  string role = 3;
  string createdAt = 4;
  string updatedAt = 5;
}

message UsersResponse {
  repeated UserResponse users = 1;
}

message Empty {}
